# esp-serial-flasher

./: .check_copyright_config.yaml  .cz.toml  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FileDocumentation.txt  Kconfig  README.md  astyle_config  idf_component.yml  pytest.ini
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: dangerjs.yml  issue_bot.yml  new_release.yml  pre_commit.yml  stub_sources_correctness.yml  sync-jira.yml
cmake/: add_gen_esp_stubs_target.cmake  add_gen_flasher_stub_target.cmake  esp_stubs.c.template  esp_stubs.h.template  gen_esp_stubs.py  gen_flasher_stub.py  gen_stub_sources.py  serial_flasher_pull_stubs.cmake
docs/: README.md  configuration.md  contributing.md  hardware-connections.md  migration-v1-to-v2.md  platform-setup.md  supporting-new-platform.md  supporting-new-targets.md
example/main/: serial_flash_example_main.c
examples/: README.md  conftest.py
examples/binaries/ESP32_AT_Firmware/: note.txt
examples/binaries/source/: CMakeLists.txt
examples/binaries/source_ESP8266/: sdkconfig.defaults
examples/common/: bin2array.cmake  example_common.c  example_common.h  require_target_firmware.cmake
examples/desktop_esp32_example/: CMakeLists.txt
examples/desktop_esp32_example/main/: main.cpp
examples/esp32_deflate_example/: README.md  pytest_esp32_deflate_example.py  sdkconfig.defaults
examples/esp32_deflate_example/main/: CMakeLists.txt  main.c
examples/esp32_deflate_example/target-firmware/: README.md  compress_firmware.py
examples/esp32_example/: CMakeLists.txt  README.md  pytest_esp32_example.py  sdkconfig.defaults  sdkconfig.defaults.MD5_disabled
examples/esp32_example/main/: CMakeLists.txt  main.c
examples/esp32_fast_reflash_example/: README.md  pytest_esp32_fast_reflash_example.py  sdkconfig.defaults
examples/esp32_fast_reflash_example/main/: CMakeLists.txt  main.c
examples/esp32_get_target_info_example/: README.md  pytest_esp32_get_target_info_example.py
examples/esp32_get_target_info_example/main/: CMakeLists.txt  main.c
examples/esp32_load_ram_example/: CMakeLists.txt  README.md  pytest_esp32_load_ram_example.py
examples/esp32_load_ram_example/main/: CMakeLists.txt  main.c
examples/esp32_read_flash_example/: CMakeLists.txt  README.md  pytest_esp32_read_flash_example.py
examples/esp32_read_flash_example/main/: main.c
examples/esp32_sdio_example/: README.md  pytest_esp32_sdio_example.py  sdkconfig.defaults
examples/esp32_sdio_example/main/: CMakeLists.txt  main.c
examples/esp32_sdio_load_ram_example/: CMakeLists.txt  README.md  pytest_esp32_sdio_load_ram_example.py  sdkconfig.defaults
examples/esp32_sdio_load_ram_example/main/: CMakeLists.txt  main.c
examples/esp32_sdio_load_ram_example/target-firmware/: README.md
examples/esp32_spi_load_ram_example/: CMakeLists.txt  README.md  pytest_esp32_spi_load_ram_example.py  sdkconfig.defaults
examples/esp32_spi_load_ram_example/main/: CMakeLists.txt  main.c
examples/esp32_stub_example/: CMakeLists.txt  README.md  pytest_esp32_stub_example.py
examples/esp32_stub_example/main/: CMakeLists.txt  main.c
examples/esp32_usb_cdc_acm_example/: CMakeLists.txt  README.md  pytest_esp32_usb_cdc_acm_example.py  sdkconfig.defaults
examples/esp32_usb_cdc_acm_example/main/: CMakeLists.txt  idf_component.yml  main.c
examples/linux_example/: CMakeLists.txt  README.md  main.c  pytest_linux_example.py
examples/pi_pico_example/: CMakeLists.txt  README.md  main.c  pytest_pi_pico_example.py
examples/raspberry_example/: CMakeLists.txt  README.md  pytest_raspberry_example.py
examples/raspberry_example/Src/: .gitignore  main.c
examples/stm32_example/: CMakeLists.txt  README.md  pytest_stm32_example.py  stm32_flasher.ioc
examples/zephyr_example/: CMakeLists.txt  Kconfig  README.md  prj.conf  pytest_zephyr_example.py  sample.yaml  sections-rom.ld  zephyr_sample.c
examples/zephyr_example/boards/: esp32_devkitc_procpu.overlay  esp32s3_devkitc_procpu.overlay  esp_threadbr_procpu.overlay
examples/zephyr_example/include/: bin_image.h  bin_images_sections.cmake
examples/zephyr_example/socs/: esp32_procpu.overlay
examples/zephyr_example/src/: main.c  shell.c
examples/zephyr_example/target-firmware/: README.md  images.csv
include/: esp_loader.h  esp_loader_error.h  esp_loader_io.h  serial_io.h
port/: esp32_port.c  esp32_port.h  esp32_sdio_port.c  esp32_sdio_port.h  esp32_spi_port.c  esp32_spi_port.h  esp32_usb_cdc_acm_port.c  esp32_usb_cdc_acm_port.h  linux_port.c  linux_port.h  pi_pico_port.c  pi_pico_port.h  raspberry_port.c  raspberry_port.h  serial_port.cpp  serial_port.h  stm32_port.c  stm32_port.h  wjwwood_serial_port.cpp  wjwwood_serial_port.h  zephyr_port.c  zephyr_port.h
port/common/: loader_port_stdio_log.c  loader_port_stdio_log.h
private_include/: esp_loader_protocol.h  esp_stubs.h  esp_targets.h  loader_log.h  md5_hash.h  protocol.h  protocol_prv.h  serial_comm.h  serial_comm_prv.h  sip.h  slip.h
src/: esp_loader.c  esp_sdio_stubs.c  esp_stubs.c  esp_targets.c  protocol_common.c  protocol_sdio.c  protocol_serial.c  protocol_spi.c  protocol_uart.c  serial_comm.c  slip.c
src/stubs/: esp_stub_esp32.c  esp_stub_esp32c2.c  esp_stub_esp32c3.c  esp_stub_esp32c5.c  esp_stub_esp32c6.c  esp_stub_esp32c61.c  esp_stub_esp32h2.c  esp_stub_esp32p4.c  esp_stub_esp32p4rev1.c  esp_stub_esp32s2.c  esp_stub_esp32s3.c  esp_stub_esp8266.c  esp_stubs_table.c
submodules/: FindWjwwoodSerial.cmake
test/: CMakeLists.txt  README.md  build_target_example.py  catch.hpp  qemu_test.cpp  requirements_test.txt  run_qemu_test.sh  run_test.sh  serial_io_mock.cpp  serial_io_mock.h  serial_io_tcp.cpp  test.cpp  test_main.cpp  test_port.h  test_tcp_port.cpp
test/target-example-src/: README.md
test/target-example-src/hello-world-ESP32-src/: CMakeLists.txt  sdkconfig.defaults.flash  sdkconfig.defaults.ram
zephyr/: CMakeLists.txt  Kconfig  module.yml
zephyr/subsys/esp_loader/: CMakeLists.txt
(+8 files in other folders)
